# Barcelona-archives-system

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: agent.py  clip_handler.py  models.py  rag_retriever.py  vector_store.py
backend/app/routes/: admin.py  archives.py  chat.py
frontend/: .dockerignore  .env  Dockerfile  README.MD  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  db.js  main.js  style.css
frontend/src/components/: Sidebar.vue
frontend/src/views/: Archives.vue  Home.vue  Settings.vue  SourceView.vue
pipeline/: .dockerignore  Dockerfile  README.md  clean_qdrant.py  main.py  pipeline_v2.py  requirements.txt
pipeline/exampleFile/: example_document.txt  guiradbcn_a1945m1d1.md  guiradbcn_a1945m1d10.md  guiradbcn_a1945m1d2.md  guiradbcn_a1945m1d5.md  guiradbcn_a1945m1d6.md  guiradbcn_a1945m1d7.md  guiradbcn_a1945m1d8.md  guiradbcn_a1945m1d9.md
